# aws-architectures

./: .gitignore  Dockerfile
aws-pulumi-project-structure-python/: README.rst  mypy.ini  pyproject.toml
aws-pulumi-project-structure-python/config/: Pulumi.stackname.yaml.example
aws-pulumi-project-structure-python/dockerfiles/: Dockerfile.debian
aws-pulumi-project-structure-python/src/components/: virtual_network.py
aws-pulumi-project-structure-python/src/infrastructure/k8s_cluster/: Pulumi.k8s-cluster.dev.yaml  Pulumi.yaml  __main__.py
aws-pulumi-project-structure-python/src/infrastructure/network/: Pulumi.k8s-network.test.yaml  Pulumi.shared-network.dev.yaml  Pulumi.yaml  __main__.py
aws-pulumi-project-structure-python/tests/: test_eura2021_pulumi_tools.py
pulumi/: pyproject.toml
pulumi/config/: Pulumi.stackname.yaml.example
pulumi/src/components/: virtual_network.py
pulumi/src/infrastructure/k8s_cluster/: __main__.py
pulumi/src/infrastructure/network/: Pulumi.yaml  __main__.py
pulumi/src/infrastructure/secret_store_demo/: __main__.py
pulumi/src/infrastructure/secret_store_demo/manifests/: deployment.yaml
pulumi/src/kubernetes/external_secrets/: Pulumi.yaml  __main__.py
pulumi/src/kubernetes/secret_store_csi/: Pulumi.yaml  __main__.py
pulumi/src/kubernetes/secret_store_csi/manifests/: secretproviderclass.yaml
pulumi/src/lib/: base_types.py
